# JniDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/narkang/jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni-utils.cpp
app/src/main/java/com/narkang/jni/: JNIActivity.java
app/src/main/java/com/narkang/jni/util/: JNIUtil.java
app/src/main/jni/: jni-utils.c
app/src/main/res/layout/: activity_jni.xml
app/src/test/java/com/narkang/jni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
